<resources>
    <string name="app_name">Out Draw</string>
    <string name="welcome_text">“You must have chaos within you to give birth to a dancing star.”</string>
    <string name="start_button">go paint </string>
    <string name="gallery_text">gallery</string>
    <string name="canvasContentDescription">This is an empty canvas.. start painting!</string>
    <string name="painting_saved">Painting saved!</string>

    <string name="delete_dialog">You really want to delete this painting?</string>
    <string name="delete_dialog_yes">yes</string>
    <string name="delete_dialog_no">no</string>

    <string name="painting_deleted">Painting was deleted</string>
    <string name="share_text">Look what I did! using Out Draw</string>
    <string name="sharing_failed">Something went wrong..</string>
    <string name="share_where">where to share?</string>
    <string name="about_text">Draw App pushes you out of your usual habits with choosing color and thickness of every line you draw.</string>
    <string name="about_text2">And careful! Once drawn there\'s no going back.</string>
    <string name="about_button_text">about</string>
    <string name="back_button_text">back</string>
</resources>