<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.outdraw.gallery.GalleryViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/home_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_home_xml_home_constraint_scene">

        <ImageView
            android:id="@+id/home_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/back_3_1" />

        <TextView
            android:id="@+id/home_welcome_text"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@font/delius"
            android:includeFontPadding="false"
            android:paddingStart="40dp"
            android:paddingTop="28dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:rotation="-10"
            android:text="@string/welcome_text"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_about" />


        <Button
            android:id="@+id/home_start_button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/delius"
            android:text="@string/start_button"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/secondaryDarkColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_gallery_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:cropToPadding="true"
            android:paddingStart="7dp"
            android:paddingTop="7dp"
            android:paddingEnd="7dp"
            android:paddingBottom="7dp"
            app:backgroundTint="@color/primary"
            app:icon="@drawable/galerie_kl"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconTint="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/home_start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/primaryTextColor" />


        <TextView
            android:id="@+id/home_gallery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-24dp"
            android:fontFamily="@font/delius"
            android:rotation="-26"
            android:rotationX="11"
            android:rotationY="8"
            android:text="@string/gallery_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_gallery_button"
            app:layout_constraintEnd_toStartOf="@+id/home_gallery_button"
            app:layout_constraintTop_toTopOf="@+id/home_gallery_button"
            app:layout_constraintVertical_bias="0.0" />

        <FrameLayout
            android:id="@+id/home_about_frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/generalBackground"
            android:translationZ="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/home_about_textview_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/delius"
                    android:text="@string/about_text"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.20" />

                <TextView
                    android:id="@+id/home_about_textview_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/delius"
                    android:text="@string/about_text2"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_1" />

                <ImageView
                    android:id="@+id/home_art_view"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:alpha="1"
                    android:rotation="-10"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_2"
                    app:layout_constraintVertical_bias="0.25"
                    tools:srcCompat="@color/secondaryDarkColor" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/home_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:translationZ="20dp"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_help"
            app:tint="@color/primaryTextColor" />


    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>

